# HRT-Boost

./: CITATION.bib  CITATION.cff  README.md  pyproject.toml
docs/: DATASETS.md  RELEASE_CHECKLIST.md
hrt_boost/: __init__.py  estimators.py
scripts/: run_benchmark.py  run_quick_demo.py
tests/: test_estimators.py
